--- a/app/templates/microservice-service.yaml
+++ b/app/templates/microservice-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "app.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
 spec:
