--- a/values/translations.yaml
+++ b/values/translations.yaml
@@ -6,9 +6,9 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/mylifesync/
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.0.9"
+  tag: "v0.0.1"
 
 openapi:
   enabled: true
